--- a/index.html
+++ b/index.html
@@ -61,10 +61,27 @@
             </div>
           </div>
           <div class="hero-portrait">
-            <figure class="portrait-card">
-              <img class="avatar" src="/assets/dr-aswathy.jpg?v=2" alt="Dr. Aswathy Pavithran">
-              <figcaption>Consulting at Krishna Hospital, Ernakulam</figcaption>
+            <figure class="portrait-card" aria-label="Portrait of Dr. Aswathy Pavithran">
+              <div class="portrait-frame">
+                <img class="avatar" src="/assets/dr-aswathy.jpg?v=2" alt="Dr. Aswathy Pavithran">
+              </div>
             </figure>
+          </div>
+        </div>
+      </section>
+
+      <section id="experience" class="section minimal">
+        <div class="container">
+          <div class="surface-card story-card">
+            <header class="story-head">
+              <p class="eyebrow">Experience</p>
+              <h2>Trusted pediatric care for over 25 years</h2>
+            </header>
+            <div class="story-body">
+              <p>With over 25 years of dedicated experience in pediatrics, Dr. Aswathy Pavithran has built her career on trust, care, and excellence.</p>
+              <p>She began her medical journey at TD Medical College, Alappuzha, followed by a postgraduate specialization at KMC, Manipal. Over the years, she has served as a Consultant Pediatrician at some of Kerala’s leading institutions, including Dr. Nair’s Hospital, Kollam, Sankers Hospital, Kollam, and City Hospital, Ernakulam, where she consulted until 2025.</p>
+              <p>Today, she continues her commitment to child health at Krishna Hospital, Ernakulam, where her wealth of knowledge and compassionate approach make her a trusted name among families.</p>
+            </div>
           </div>
         </div>
       </section>
@@ -72,14 +89,14 @@
       <section id="about" class="section minimal">
         <div class="container">
           <div class="surface-card hospital-card">
-            <header class="hospital-head">
-              <h2>Hospital Affiliation</h2>
-              <p class="hospital-name">Krishna Hospital</p>
+            <header class="story-head">
+              <p class="eyebrow">Hospital Affiliation</p>
+              <h2 class="story-title">Krishna Hospital</h2>
             </header>
             <address class="hospital-grid">
               <div class="hospital-block">
                 <h3>Location</h3>
-                <p>Chittoor, near Shenoys</p>
+                <p>Chittoor, Near Shenoys</p>
                 <p>Metro Pillar 692, M.G. Road</p>
                 <p>Opposite Maharaja's College Ground</p>
                 <p>Ernakulam – 682011</p>
