Update hospital deets + remove number

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
       "@type": "Physician",
       "name": "Dr. Aswathy Pavithran",
       "medicalSpecialty": "Pediatrics",
-      "telephone": "+91 8921392442",
+      "telephone": "+91 9961173300",
       "email": "draswathy@gmail.com",
       "url": "https://draswathypavithran.com/",
       "address": {
         "@type": "PostalAddress",
+        "streetAddress": "Vijayalakshmi Medical Centre, Chakkaraparambu",
         "addressLocality": "Ernakulam",
         "addressCountry": "IN"
       }
@@ -53,11 +54,10 @@
           <div class="hero-copy">
             <h1 class="page-title">Dr. Aswathy Pavithran</h1>
             <p class="lede">MBBS, MD (Pediatrics)</p>
-            <p class="hero-note">Consultant Pediatrician at Krishna Hospital, Ernakulam</p>
+            <p class="hero-note">Consultant Pediatrician at Vijayalakshmi Medical Centre, Kochi</p>
             <div class="cta-row hero-actions">
-              <a class="btn btn-primary" href="tel:+918921392442">Call Clinic</a>
+              <a class="btn btn-primary" href="tel:+919961173300">Call Clinic</a>
               <a class="btn btn-secondary" href="mailto:draswathy@gmail.com">Email</a>
-              <a class="btn btn-secondary" href="https://wa.me/918921392442" target="_blank" rel="noopener">WhatsApp</a>
             </div>
           </div>
           <div class="hero-portrait">
@@ -80,7 +80,7 @@
             <div class="story-body">
               <p>With over 25 years of dedicated experience in pediatrics, Dr. Aswathy Pavithran has built her career on trust, care, and excellence.</p>
               <p>She began her medical journey at TD Medical College, Alappuzha, followed by a postgraduate specialization at KMC, Manipal. Over the years, she has served as a Consultant Pediatrician at some of Kerala’s leading institutions, including Dr. Nair’s Hospital, Kollam, Sankers Hospital, Kollam, and City Hospital, Ernakulam, where she consulted until 2025.</p>
-              <p>Today, she continues her commitment to child health at Krishna Hospital, Ernakulam, where her wealth of knowledge and compassionate approach make her a trusted name among families.</p>
+              <p>Today, she continues her commitment to child health at Vijayalakshmi Medical Centre, Kochi, where her wealth of knowledge and compassionate approach make her a trusted name among families.</p>
             </div>
           </div>
         </div>
@@ -91,20 +91,25 @@
           <div class="surface-card hospital-card">
             <header class="story-head">
               <p class="eyebrow">Hospital Affiliation</p>
-              <h2 class="story-title">Krishna Hospital</h2>
+              <h2 class="story-title">Vijayalakshmi Medical Centre</h2>
             </header>
             <address class="hospital-grid">
               <div class="hospital-block">
                 <h3>Location</h3>
-                <p>Chittoor, Near Shenoys</p>
-                <p>Metro Pillar 692, M.G. Road</p>
-                <p>Opposite Maharaja's College Ground</p>
-                <p>Ernakulam – 682011</p>
+                <p>Chakkaraparambu</p>
+                <p>Near Hotel Holiday Inn</p>
+                <p>NH Bypass, Vennala</p>
+                <p>Kochi, Kerala</p>
               </div>
               <div class="hospital-block hospital-contacts">
                 <h3>Contact</h3>
-                <p><span>Phone</span><a href="tel:+914844095888">+91 484 409 5888</a></p>
-                <p><span>Website</span><a href="https://krishnahospital.in/" target="_blank" rel="noopener">krishnahospital.in</a></p>
+                <p><span>Phone</span><a href="tel:+919961173300">+91 99611 73300</a></p>
+                <p><span>Alternate</span><a href="tel:+919946932600">+91 99469 32600</a></p>
+              </div>
+              <div class="hospital-block">
+                <h3>Timings</h3>
+                <p>Monday to Friday: 9am–1pm, 4pm–6pm</p>
+                <p>Saturday: 9am–1pm</p>
               </div>
             </address>
           </div>
@@ -116,9 +121,9 @@
           <div class="surface-card contact-card">
             <h2>Connect</h2>
             <ul class="contact-actions">
-              <li><a href="tel:+918921392442">Call</a></li>
+              <li><a href="tel:+919961173300">Call (99611 73300)</a></li>
+              <li><a href="tel:+919946932600">Call (99469 32600)</a></li>
               <li><a href="mailto:draswathy@gmail.com">Email</a></li>
-              <li><a href="https://wa.me/918921392442" target="_blank" rel="noopener">WhatsApp</a></li>
             </ul>
             <p class="fine dim">Ernakulam, Kerala · © <span id="year"></span> Dr. Aswathy Pavithran</p>
           </div>
